--- a/.github/workflows/auto-integrate-templates.yml
+++ b/.github/workflows/auto-integrate-templates.yml
@@ -14,6 +14,9 @@ jobs:
       (github.event.comment.body == '!integrate' && github.actor == github.repository_owner)
     
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
     
     steps:
       - name: Checkout PR branch
