--- a/.github/workflows/openclaw-integration.yml
+++ b/.github/workflows/openclaw-integration.yml
@@ -52,6 +52,9 @@ jobs:
   auto-merge:
     if: github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
     
     steps:
       - name: Auto-merge PR
